# wlingo

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  words.csv
.claude/: settings.json
.claude/skills/comment/: SKILL.md
.claude/skills/ruff/: SKILL.md
.github/workflows/: ci.yml
frontend/: .env.development  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: ModeToggle.tsx  OptionButton.tsx  PageShell.tsx  PrimaryButton.tsx  ProgressBar.tsx  ResumeCard.tsx  ScoreRing.tsx  SpellingInput.test.tsx  SpellingInput.tsx  Spinner.tsx  TopicSection.tsx
frontend/src/lib/: api.test.ts  api.ts  env.ts  types.ts
frontend/src/pages/: QuizPage.test.tsx  QuizPage.tsx  ResultPage.test.tsx  ResultPage.tsx  StartPage.test.tsx  StartPage.tsx
frontend/src/test/: setup.ts
scripts/: generate_explanations.py
src/: main.py
src/static/: style.css
src/templates/: index.html  quiz.html  result.html  start.html
src/vocabulary/: English.csv  Korean.csv  words.bk.csv  words.csv
src/vocabulary/spelling/: Chinese_Pinyin.csv  Japanese_Kanji.csv
src/vocabulary/translation/: Chinese_Translation.csv  Japanese_to_Korean.csv
src/wlingo/: app.py  config.py  globals.py  main.py  models.py  quiz.py  redis_session.py  router.py  vocabulary.py
src/wlingo/routers/: api.py  deps.py  pages.py
static/: style.css
templates/: index.html  result.html
tests/: conftest.py  test_api.py  test_quiz.py  test_vocabulary.py
