[project]
name = "wlingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "fastapi>=0.124.0",
    "flake8>=7.3.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
