[project]
name = "wlingo"
version = "0.1.0"
description = "Vocabulary quiz app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
    "redis>=5.0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.10",
]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
